force-app/main/default/objects/Bonus_Commission__c/Bonus_Commission__c.object-meta.xml
<CustomObject>
    <description>Used to calculate and report on the total Bonus &amp; Commissions for a corresponding Sales Target.  Using a different object for Sharing visibility.  Sales Reps should be able to see each others Sales Targets but not each others Bonus &amp; Commissions.</description>
    <label>Bonus &amp; Commission</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Bonus &amp; Commission ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus &amp; Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>