force-app/main/default/objects/Bonus_Commission__c/fields/Activation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Activation_Percentage__c</fullName>
    <formula>Sales_Target__r.Activation_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>