force-app/main/default/objects/Bonus_Commission__c/fields/Actual_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spiff__c</fullName>
    <formula>Sales_Target__r.Sales_Rep_Actual_Spiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>