force-app/main/default/objects/Bonus_Commission__c/fields/Available_Commission__c.field-meta.xml
<CustomField>
    <fullName>Available_Commission__c</fullName>
    <formula>Sales_Target__r.Available_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>