force-app/main/default/objects/Bonus_Commission__c/fields/Commission_Qualified_Sales__c.field-meta.xml
<CustomField>
    <fullName>Commission_Qualified_Sales__c</fullName>
    <formula>Sales_Target__r.Commission_Qualified_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Qualified Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>