force-app/main/default/objects/Bonus_Commission__c/fields/Earned_Commission__c.field-meta.xml
<CustomField>
    <fullName>Earned_Commission__c</fullName>
    <formula>Sales_Target__r.Earned_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>