force-app/main/default/objects/Bonus_Commission__c/fields/Paid_Bonus_Commission__c.field-meta.xml
<CustomField>
    <fullName>Paid_Bonus_Commission__c</fullName>
    <description>Field from Sales Target.  Displayed here for sharing visibility.</description>
    <formula>Sales_Target__r.Sales_Rep_Paid_Bonus_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Bonus &amp; Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>