force-app/main/default/objects/Bonus_Commission__c/fields/Paid_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Paid_Spiff__c</fullName>
    <formula>Sales_Target__r.Sales_Rep_Paid_Spiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>