force-app/main/default/objects/Bonus_Commission__c/fields/Potential_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Potential_Spiff__c</fullName>
    <formula>Sales_Target__r.Sales_Rep_Potential_Spiff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Potential Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>