force-app/main/default/objects/Bonus_Commission__c/fields/Sales_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Month__c</fullName>
    <formula>Sales_Target__r.Target_Date__c</formula>
    <label>Sales Month</label>
    <type>Date</type>
</CustomField>