force-app/main/default/objects/Bonus_Commission__c/fields/Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The related Sales Target for the Bonus &amp; Commission</description>
    <label>Sales Target</label>
    <referenceTo>Sales_Target__c</referenceTo>
    <relationshipLabel>Bonus &amp; Commissions</relationshipLabel>
    <relationshipName>Bonus_Commissions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>